--- a/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
+++ b/weapp/apps/customerized_apps/scratch/templates/webapp/m_scratch.html
@@ -512,7 +512,8 @@
                                 scratch_card.initialize();
                                 $('.wui-i-cardInfo').get(0).style.zIndex = '1';
                                 $('.wa-prizeName').html('');
-                                $('.wa-grade').html('谢谢参与');                              
+                                $('.wa-grade').html('谢谢参与');  
+                                isScratching = false;                            
                             }
                         }
                     });
