--- a/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/edit_qrcode.html
@@ -14,7 +14,7 @@
 <ul class="breadcrumb">
 	<li>您当前所在位置</li>
 	<li>
-		<a href="/new_weixin/materials/">推广与分销</a>
+		<a href="/new_weixin/qrcodes//">推广与分销</a>
 	</li>
 	<li><a href="/new_weixin/qrcodes/">活动推广码</a></li>
 	<li class="active">{% if qrcode.id %}编辑{% else %}新建{% endif %}二维码</li>
