--- a/weapp/weixin2/templates/weixin/advance_manage/qrcode_member.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcode_member.html
@@ -42,7 +42,7 @@
 	<div class="relative">
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
-			<li><a href="/new_weixin/materials/">推广与分销</a></li>
+			<li><a href="/new_weixin/qrcodes//">推广与分销</a></li>
 			<li><a href="/new_weixin/qrcodes/">活动推广码</a></li>
 			<li class="active">关注会员</li>
 		</ul>
