重新改写商品模块模版

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -632,173 +632,13 @@
             });
         </script>
         <script id="productListTemplate" type="text/x-handlebars-template">
-{{#ifCond component.type '==' 'wepage.item_group'}}
-<div
-    class="xa-products-box wui-product {{#ifCond component.model.itemname 'isvalid' ''}}wui-productTitle{{/ifCond}}"
-    data-component-cid="{{component.cid}}"
-    data-index="{{component.model.index}}"
->
-    <ul class="wui-block-type{{component.model.type}} wui-card-type-{{component.model.card_type}} ">
-        {{#ifCond component.components 'isvalid' ''}}
-            {{#ifCond component.valid_product_count '>=' 0}}
-                {{#each component.components as |sub_component item_index|}}
-                {{{sub_component.html}}}
-                {{/each}}
-            {{else}}
-                <li class="">
-                    <a class="wui-inner-box1" >
-                        <div class="wui-inner-pic">
-                            <p class="xui-productTitle">第一个商品</p>
-                        </div>
-                         <div class="wui-inner-titleAndprice ">
-                            <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                            <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="">
-                    <a class="wui-inner-box1" >
-                        <div class="wui-inner-pic">
-                            <p class="xui-productTitle">第二个商品</p>
-                        </div>
-                         <div class="wui-inner-titleAndprice">
-                            <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                            <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="">
-                    <a class="wui-inner-box1" >
-                        <div class="wui-inner-pic">
-                            <p class="xui-productTitle">第三个商品</p>
-                        </div>
-                         <div class="wui-inner-titleAndprice">
-                            <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                            <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                        </div>
-                    </a>
-                </li>
-                <li class="wui-inner-defalut-box4">
-                    <a class="wui-inner-box1" >
-                        <div class="wui-inner-pic">
-                            <p class="xui-productTitle">第四个商品</p>
-                        </div>
-                         <div class="wui-inner-titleAndprice">
-                            <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                            <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                        </div>
-                    </a>
-                </li>
-            {{/ifCond}}
-        {{else}}
-            <li class="">
-                <a class="wui-inner-box1" >
-                    <div class="wui-inner-pic">
-                        <p class="xui-productTitle">第一个商品</p>
-                    </div>
-                     <div class="wui-inner-titleAndprice ">
-                        <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                        <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                    </div>
-                </a>
-            </li>
-            <li class="">
-                <a class="wui-inner-box1" >
-                    <div class="wui-inner-pic">
-                        <p class="xui-productTitle">第二个商品</p>
-                    </div>
-                     <div class="wui-inner-titleAndprice">
-                        <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                        <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                    </div>
-                </a>
-            </li>
-            <li class="">
-                <a class="wui-inner-box1" >
-                    <div class="wui-inner-pic">
-                        <p class="xui-productTitle">第三个商品</p>
-                    </div>
-                     <div class="wui-inner-titleAndprice">
-                        <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                        <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                    </div>
-                </a>
-            </li>
-            <li class="wui-inner-defalut-box4">
-                <a class="wui-inner-box1" >
-                    <div class="wui-inner-pic">
-                        <p class="xui-productTitle">第四个商品</p>
-                    </div>
-                     <div class="wui-inner-titleAndprice">
-                        <p class="wa-inner-title xui-inner-title">在此处显示商品名称</p>
-                        <p class="wa-inner-price xui-inner-price">￥100.00</p>
-                    </div>
-                </a>
-            </li>
-        {{/ifCond}}
-    </ul>
-</div>
-{{/ifCond}}
-
-{{#ifCond component.type '==' 'wepage.item'}}
-<li
-    data-component-cid="{{component.cid}}"
-    data-index="{{component.model.index}}"
->
-    {{#updateContext component}}
-    {{#updateContext component.runtime_data.product}}
-    <a
-        class="wui-inner-box{{index}}{{#ifCond product.is_member_product 'isvalid' ''}} xa-member-product{{/ifCond}} wa-item-product"
-        href="javascript:void(0);"
-        data-handlebar-data='{ "index":"{{index}}", "product":{"thumbnails_url":"{{product.thumbnails_url}}", "name":"{{product.name}}", "display_price":"{{product.display_price}}"} }'
-        data-product-promotion='{{product.promotion_js}}'
-        data-product-price="{{product.display_price}}"
-    >
-        <div class="wui-inner-pic">
-            {{#ifCond product.thumbnails_url 'isvalid' ''}}
-            <img src="{{product.thumbnails_url}}" />
-            {{else}}
-            <p>{{product.name}}</p>
-            {{/ifCond}}
-        </div>
-        <div class="wui-inner-titleAndprice">
-            <p
-                class="wa-inner-title xui-inner-title"
-                {{#ifCond component.parent_component.model.type '==' '3'}}
-                {{else}}
-                    {{#ifCond component.parent_component.model.itemname 'isvalid' ''}}
-                    {{else}}
-                    style="display:none;"
-                    {{/ifCond}}
-                {{/ifCond}}
-            >{{product.name}}</p>
-
-            <p
-                class="wa-inner-price xui-inner-price
-                {{#ifCond component.parent_component.model.type '==' '3'}}
-                {{else}}
-                    {{#ifCond component.parent_component.model.card_type '==' '1'}}
-                    {{else}}
-                        {{#ifCond component.parent_component.model.itemname 'isvalid' ''}}
-                        xui-border
-                        {{/ifCond}}
-                    {{/ifCond}}
-                {{/ifCond}}"
-                {{#ifCond component.parent_component.model.type '==' '3'}}
-                {{else}}
-                    {{#ifCond component.parent_component.model.price 'isvalid' ''}}
-                    {{else}}
-                    style="display:none;"
-                    {{/ifCond}}
-                {{/ifCond}}
-            ><span>¥</span>{{product.display_price}}</p>
-        </div>
-    </a>
-    {{/updateContext}}
-    {{/updateContext}}
-</li>
-{{/ifCond}}
-
+            <div class="xa-products-box wui-product wui-productTitle">
+                <ul class="wui-block-type-0 wui-card-type ">
+                    {{#each people}}
+                        <li>{{this}}</li>
+                    {{/each}}
+                </ul>
+            </div>
         </script>
         {% endif %}
         {% if not is_deleted_data %}
