--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -86,7 +86,7 @@
 				<th width="115">商品价格（元）</th>
 				<th width="50">库存</th>
 				<th width="78">总销量</th>
-				<th width="120">{{if data.data.mall_type == 1}}同步{{else}}创建{{/if}}时间</th>
+				<th width="120">{{if data.data.mall_type == 1}}创建{{else}}创建{{/if}}时间</th>
 				<th width="58">排序</th>
 				<th width="90">操作</th>
 			</tr>
