增加前端域名常量

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -330,7 +330,7 @@
             W.isSubscribedMember = true;   
 
             W.errorMessage = null;
-            W.H5_HOST = {{ H5_HOST }};
+            W.H5_HOST = "{{ H5_HOST }}";
 
             {% if messages %}
             {% for message in messages %}
