--- a/weapp/weixin2/templates/weixin/channels/channel_distribution.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distribution.html
@@ -1,4 +1,6 @@
 {% extends "content_base_v2.html" %}
+{% load common_tag %}
+{% load account_filter %}
 {% block css %}
 <style>
 
@@ -10,80 +12,103 @@
 <ul class="breadcrumb">
 	<li>您当前所在位置</li>
 	<li>
-		<a href="/new_weixin/materials/">高级管理</a>
+		<a href="/new_weixin/qrcodes/">推广与分销</a>
 	</li>
-	<li><a href="/new_weixin/qrcodes/">带参数二维码</a></li>
+	<li><a href="new_weixin/channel_distributions/">渠道分销</a></li>
 	<li class="active">{% if qrcode.id %}编辑{% else %}新建{% endif %}二维码</li>
 </ul>
-
+<div class="xui-weixin-qrcodePage">
 <form class="form-horizontal" method="post" id="editForm" action="/new_weixin/api/channel_distribution/">
-    <div>
-        <label>会员头衔：</label>
-        <input type="text" />
+<div class="xui-setting">
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">会员头衔：</label>
+        <input type="text" name="bing_member_title"/>
     </div>
-    <div>
-        <label>关联会员：</label>
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">关联会员：</label>
         <span class="xa-selectMemberName ml10"></span>
         <button class="xa-selectMemberDailog" type="button">选择关注会员</button>
     </div>
 
  <hr/>
-    <div>
+    <div class="xui-row pr">
         奖励设置 奖励给代言人
     </div>
     <hr/>
-    <div>
-        <label>分销奖励：</label>
-        <select>
-            <option>无</option>
-            <option>佣金</option>
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">分销奖励：</label>
+        <select name="distribution_rewards">
+            <option value="0">无</option>
+            <option value="1">佣金</option>
         </select>
     </div>
-    <div>
-        <label>佣金返现率：</label>
-        <input type="text">%（注：返现率不得高于20%；佣金=优惠后的价格X返现率）
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">佣金返现率：</label>
+        <input name="commission_rate" type="text">%（注：返现率不得高于20%；佣金=优惠后的价格X返现率）
     </div>
-    <div>
-        <label>最低返现折扣：</label>
-        <input type="text">%（注：若设置为80，则商品在优惠的价格在80%以下不参与返佣金）
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">最低返现折扣：</label>
+        <input name="minimun_return_rate" type="text">%（注：若设置为80，则商品在优惠的价格在80%以下不参与返佣金）
     </div>
-    <div>
-        <label>佣金返现标准：</label>
-        <input type="text" /> 元（佣金取现最低金额）
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">佣金返现标准：</label>
+        <input name="minimum_return_amount" type="text" /> 元（佣金取现最低金额）
     </div>
-    <div>
-        <label>多少天结算标准：</label>
-        <input type="text" />
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">多少天结算标准：</label>
+        <input name="return_standard" type="text" />
 {#        <input name="standardMethod" type="radio" value="1" />是#}
 {#        <input name="standardMethod" type="radio" value="0" />否#}
     </div>
-    <div>扫码设置</div>
+    <div class="xui-row pr">扫码设置</div>
     <hr/>
-    <div>
-        <label>
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">
             添加到分组：
         </label>
-        <select>
+        <select name="group_id">
             {% for tag in tags %}
             <option value="{{tag.id}}"{% if qrcode.tag_id == tag.id or not qrcode.tag_id and tag.name == '未分组' %}selected="selected"{% endif%}>{{tag.name}}</option>
             {% endfor %}
         </select>
         <div>内置分组为会员分组</div>
     </div>
-    <div>
-        <label>扫描奖励：</label>
-        <div>
-        <div></div>
+    <div class="xui-row pr">
+        <label class="xui-i-left fl">扫描奖励：</label>
+        <div class=" fl mt18 ml20">
+        <div class="controls" id="prize_selector" data-ui-role="prize-selector" data-init-prizeinfo='{% if qrcode %}{{ qrcode.award_prize_info|safe }}{% else %}{% endif %}'></div>
+        <input id="prize_info" name="prize_info" class="hide" value="">
         </div>
 
     </div>
-    <div>
-        <label>扫码回复:</label>
-	<div class="tab-content" style="margin: 20px 0 5px 160px;">
+{#    <div class="xui-row pr">#}
+{#        <label class="xui-i-left fl">扫码回复:</label>#}
+{#	<div class="tab-content" style="margin: 20px 0 5px 160px;">#}
+{#				<div id="weixinMessageEdite r-textMessageZone" style="width: 350px">#}
+{#					<div class="control-group mr5 mt5">#}
+{#						<div class="controls ml20">#}
+{#							<textarea class="input-xlarge hide xa-a" id="reply_detail" name="reply_detail" data-ui-role="richtext-editor" data-height="300" data-width="350"></textarea>#}
+{#						</div>#}
+{#					</div>#}
+{#				</div>#}
+{##}
+{#				<div id="weixinMessageEditer-newsMessageZone" style="width: 350px">#}
+{#					<input id="reply_material_id" name="reply_material_id" class="hide" value="">#}
+{#				</div>#}
+{#			</div>#}
+{#    </div>#}
+			<div class="xui-Sweep1 mt20 disT" style="float:none;">
+					<div class="xui-i-left lh42 tr xui-Sweep pr10 disTc vt" style="width:133px;">扫码后回复：</div>
+					<div class="fl" id="prize_qrcode">
+						<div id="edit-message-panel"></div>
+					</div>
+				<!-- </div> -->
+			</div>
+			<div class="tab-content" style="margin: 20px 0 5px 160px;">
 				<div id="weixinMessageEdite r-textMessageZone" style="width: 350px">
 					<div class="control-group mr5 mt5">
 						<div class="controls ml20">
-							<textarea class="input-xlarge hide xa-a" id="reply_detail" name="reply_detail" data-ui-role="richtext-editor" data-height="300" data-width="350"></textarea>
+							<textarea class="input-xlarge hide xa-a" id="reply_detail" name="reply_detail" data-ui-role="richtext-editor" data-height="300" data-width="350">{% if qrcode %}{{ qrcode.reply_detail|safe }}{% endif %}</textarea>
 						</div>
 					</div>
 				</div>
@@ -92,26 +117,205 @@
 					<input id="reply_material_id" name="reply_material_id" class="hide" value="">
 				</div>
 			</div>
-    </div>
+
 		<div class="xui-footerBtn xa-footerBtn">
 			<input type="button" class="btn btn-success w105 h30 mr20 xa-submit" id="submitBtn" value="保&nbsp;&nbsp;存">
 			<input type="button" class="btn btn-defalte w105 h30 xa-cancel" style="background:#fff;" id="submitBtn" value="取&nbsp;&nbsp;消">
 		</div>
+</div>
 
 </form>
+</div>
+
 {% endblock %}
 {% block js %}
     <script type="text/javascript">
-    		$(document).delegate('.xa-selectMemberDailog', 'click', function(event) {
-			options = {
-				webapp_id:{{webapp_id}},
-				selectedMemberIds:[]
-			};
-			options.success = function(data) {
-            	$('.xa-selectMemberName').html("会员昵称："+data[0].username_truncated).attr('data-id', data[0].id);
-            	$('.xa-selectMemberDailog').text("修改关注会员");
+
+        // 弹出关联会员
+        $(document).delegate('.xa-selectMemberDailog', 'click', function(event) {
+            options = {
+                webapp_id:{{webapp_id}},
+                selectedMemberIds:[] // TODO 需要修改
             };
-			W.dialog.showDialog('W.dialog.mall.SelectMemberDialog', options);
+            options.success = function(data) {
+                $('.xa-selectMemberName').html("会员昵称："+data[0].username_truncated).attr('data-id', data[0].id);
+                $('.xa-selectMemberDailog').text("修改关注会员");
+            };
+            W.dialog.showDialog('W.dialog.mall.SelectMemberDialog', options);
+        });
+		$(document).delegate('.xa-choseCoupon', 'click', function(event) {
+        W.dialog.showDialog('W.dialog.mall.SelectCouponDialog', {
+        	is_channel_qrcode: true,
+            success: function(data) {
+                var couponType = '';
+                if(data[0].limit_product) {
+                    couponType = "(多商品券)";
+                }else{
+                    couponType = "(通用券)";
+                }
+                selectCouponMoney = data[0].money;
+                couponRuleId = data[0].id;
+                remainedCount = data[0].remained_count;
+                $(".xa-couponName").text(data[0].name+couponType);
+                $(".xa-couponName").addClass('w160');
+                $(".xa-choseCoupon").text("修改");
+                $(".xa-choseCoupon").addClass('xui-firefoxhuk')
+                $('.xui-remaining').text('');
+
+                $('.xa-couponName').attr('data-id', data[0].id);
+                $('.xa-couponName').attr('data-name', data[0].name);
+
+                $('.xui-i-col').append('<div class="xui-remaining tl" style="margin-right:-142px;color:#979292;">优惠券剩余库存' + remainedCount + '张</div>')
+                var count = $("#selectCouponCount  option:selected").text();
+                var totalMoney = parseFloat(selectCouponMoney) * parseInt(count);
+                $(".xa-totalMoney").text("总价值："+ totalMoney.toFixed(2) +"元");
+            },
+            error: function(data) {}
+        });
 		});
+
+		var answerContent = W.loadJSON('qrcode_answer');
+		var options = {
+			el: '#edit-message-panel',
+			richTextEditorWidth: 800,
+			enableSubmitBtn: 'false',
+			enableCanelBtn: 'false',
+            pasteplain: true
+		};
+		if (answerContent) {
+			if (answerContent.type === 'text') {
+				options.answer = answerContent.content;
+			} else if (answerContent.type === 'news') {
+				options.materialId = answerContent.content;
+				options.material = answerContent;
+			}
+		}
+		var editor = new W.view.weixin.MessageEditor(options);
+
+
+        // 提交表单
+        $(document).delegate('.xa-submit', 'click', function (event) {
+            $('.xa-submit').attr('disabled','disabled');
+			if(!('{{ edit_qrcode }}' === 'None')){
+				var bingMemberTitle = '';
+			}else {
+                var bingMemberTitle = $.trim($('[name="bing_member_title"]').val());
+                if (bingMemberTitle === '') {
+                    W.showHint('error', '二维码名称不能为空');
+                    $('.xa-submit').removeAttr('disabled');
+                    return;
+                }
+            }
+            if(!$('.xa-selectMemberName').attr('data-id')){
+                W.showHint('error', '请选择关联会员');
+                $('.xa-submit').removeAttr('disabled');
+                return;
+             }else{
+                var bingMemberId = $('.xa-selectMemberName').attr('data-id');
+
+            }
+            var distributionRewards = $('[name="distribution_rewards"]').val();
+            if(distributionRewards==="0"){
+                var commissionRate = 0;
+                var minimunReturnRate = 0;
+                var minimumReturnAmount = 0;
+                var returnStandard = 0;
+
+            }else{
+                var commissionRate = $.trim($('[name="commission_rate"]').val());
+                var minimunReturnRate = $.trim($('[name="minimun_return_rate"]').val());
+                var minimumReturnAmount = $.trim($('[name="minimum_return_amount"]').val());
+                var returnStandard = $.trim($('[name="return_standard"]').val());
+            }
+            var groupId = $.trim($('[name="group_id"]').val());
+
+			var selectVal = $.trim($('[name="prize_type"]').val());
+			var jifen = $.trim($('[name="prize_score"]').val());
+			if(selectVal === "积分"){
+				if(jifen === ''){
+				W.showHint('error', '积分值不能为空');
+				$('.xa-submit').removeAttr('disabled');
+				return false;
+				}
+			}
+			if(!W.validate()){
+				W.showHint('error', '积分值格式错误！');
+				$('.xa-submit').removeAttr('disabled');
+				return false;
+			}
+
+
+			var chose = $(".xa-choseCoupon").html();
+			if(chose === "添加"){
+				W.showHint('error', '优惠券内容不能为空');
+				$('.xa-submit').removeAttr('disabled');
+				return false;
+			}
+			var prizeInfo = JSON.stringify($('#prize_selector').data('view').getPrizeInfo());
+            // 回复
+            var materialId = 0;
+
+			var materialStr = $('.xa-newsMessageZone a').attr('href');
+			if (materialStr && materialStr.length > 0) {
+				var strs = materialStr.split("?");
+				var str = strs[1];
+				paramFields = str.split("=");
+				materialId = parseInt(paramFields[1]);
+			}
+
+            var textContent = $.trim($('[name="text_content"]').val());
+			if (!textContent && materialId == 0) {
+				W.showHint('error', '扫码后回复内容不能为空');
+				$('.xa-submit').removeAttr('disabled');
+				return;
+			}
+			if(materialId == 0 && textContent.length > 600){
+				W.showHint('error', '扫码后回复内容不能超过600字');
+				$('.xa-submit').removeAttr('disabled');
+				return;
+			}
+            // start
+			var replyType = 0;
+			var activeLink = $('#edit-message-panel li[class="active"]').text();
+			if(activeLink === '图文消息' && materialId > 0) {
+				replyType = 2;
+				textContent = '';
+			} else {
+				replyType = 1;
+			}
+
+			var prizeInfo = JSON.stringify($('#prize_selector').data('view').getPrizeInfo());
+
+			// end
+
+			var data = {
+                bing_member_title: bingMemberTitle,
+                bing_member_id: bingMemberId,
+                distribution_rewards: distributionRewards,
+                commission_rate: commissionRate,
+                minimun_return_rate: minimunReturnRate,
+                minimum_return_amount: minimumReturnAmount,
+                return_standard: returnStandard,
+                group_id: groupId,
+                prize_info: prizeInfo,
+                reply_type: replyType,
+                reply_detail: textContent,
+                reply_material_id: materialId
+            };
+            console.log(data);
+            W.resource.new_weixin.ChannelDistribution.put({
+                data:data,
+                success: function(data) {
+                    W.showHint('success', '保存成功');
+                    window.location.href="/new_weixin/qrcodes/";
+                },
+                error: function(resp) {
+                    $('.xa-submit').removeAttr('disabled');
+                    W.showHint('error', '保存失败！');
+                }
+            });
+        });
+
+
     </script>
 {% endblock %}
