--- a/weapp/weixin2/templates/weixin/channels/channel_distributions.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distributions.html
@@ -22,7 +22,8 @@
 				class="form-control"
                 placeholder="二维码名称"
             />
-			<div class="xui-btnBox">
+</div>
 				<a class="btn btn-primary xa-search xui-fontBold " href="javascript:void(0);">查询</a>
-			</div>
+<a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode fr mr10" href="/new_weixin/channel_distribution/"><span class="xui-add-btn-icon">+</span>新建二维码</a>
+
 		</div>{% endblock %}
