--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -95,12 +95,14 @@
 					{% for nav in second_nav.navs %}
 						{% if nav.name == 'orderMoney' %}
 							{% if request.user_profile.webapp_type == 0 %}
-								<li class="{% ifequal second_nav_name nav.name %}active{% endifequal %}">
-									<a href="{{nav.url}}{% if nav.need_token %}?token={{token}}{% endif %}" {% if nav.need_token %}target="_blank"{% endif %} title="{{nav.title}}" name="{{nav.name}}">
-										<i class="xui-icon-sideBar xui-sideBar-{{nav.name}}"></i> {{nav.title|safe}}
-										<i class="xui-icon-arrow"></i>
-									</a>
-								</li>
+								{% if request.manager.username in nav.users %}
+									<li class="{% ifequal second_nav_name nav.name %}active{% endifequal %}">
+										<a href="{{nav.url}}{% if nav.need_token %}?token={{token}}{% endif %}" {% if nav.need_token %}target="_blank"{% endif %} title="{{nav.title}}" name="{{nav.name}}">
+											<i class="xui-icon-sideBar xui-sideBar-{{nav.name}}"></i> {{nav.title|safe}}
+											<i class="xui-icon-arrow"></i>
+										</a>
+									</li>
+								{% endif %}
 							{% endif %}
 						{% else %}
 							<li class="{% ifequal second_nav_name nav.name %}active{% endifequal %}">
