--- a/weapp/static_v2/js/view/mall_products_pool_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_products_pool_filter_view/template.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<div class="xui-col disTc">
-		<div class="xui-i-item">
+		<div class="xui-i-item w800">
 			<label class="">商品分类：</label>
 			<select id="firstClassification" name="firstClassification" class="xa-firstCategory">
 				<option value="-1">一级分类</option>
