--- a/weapp/apps/customerized_apps/scanlottery/templates/editor/scanlotteries.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/editor/scanlotteries.html
@@ -69,8 +69,8 @@
 
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
-			<a href="/apps/exlottery/exlottery/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建幸运码抽奖
+			<a href="/apps/scanlottery/scanlottery/" class="btn btn-success fr">
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建扫码抽奖
 			</a>
 		</div>
 
