--- a/weapp/weixin2/templates/weixin/channels/channel_distributions.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distributions.html
@@ -17,13 +17,14 @@
 	<div class="xui-filterPanel" >
         <div class="xui-form disT ml20">
             <div class="xui-i-item">
-			<input
-				type="text"
-				class="form-control"
-                placeholder="二维码名称"
-            />
-</div>
-				<a class="btn btn-primary xa-search xui-fontBold " href="javascript:void(0);">查询</a>
-<a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode fr mr10" href="/new_weixin/channel_distribution/"><span class="xui-add-btn-icon">+</span>新建二维码</a>
-
-		</div>{% endblock %}
+				<input
+					type="text"
+					class="form-control"
+	                placeholder="二维码名称"
+	            />
+			</div>
+			<a class="btn btn-primary xa-search xui-fontBold " href="javascript:void(0);">查询</a>
+			<a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode fr mr10" href="/new_weixin/channel_distribution/"><span class="xui-add-btn-icon">+</span>新建二维码</a>
+		</div>
+	</div>
+{% endblock %}
