--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery_page.html
@@ -6,28 +6,72 @@
         height: 100%;
         font-family: "黑体";
     }
-    label{
-        display: block;
-        margin-top: 10px;
-        margin-bottom: 10px;
+    .wui-scanlottery-page{
+        position: relative;
+        height: 100%;
+        background-size: 100% 100%;
     }
     .wui-hidden{
         display: none;
     }
     .wui-scanlottery-container{
-        margin: 60% 30px 30px 30px;
+        width: 70%;
+        margin: 0 auto;
+        position: relative;
+        top: 50%;
+        text-align: center;
+        font-size: 0;
+    }
+    .wui-scanlottery-container > div{
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .wui-scanlottery-btn{
+        border:none;
+        border-radius: .2rem;
+        height: 2.5rem;
+        line-height: 2.4rem;
+        color: #fff;
+        width: 45%;
+        font-size: 1rem;
+        outline: none;
+        background: -webkit-gradient(linear, left top, left bottom, from(#E84B6E), to(#D82741) );
+        box-shadow: 0 2px 0px #ac0101;
+        font-family: "黑体";
+    }  
+    .wui-again{
+        margin-right: 10%;
+        background: -webkit-gradient(linear, left top, left bottom, from(#81a8cb), to(#4477a1) );
+        box-shadow: 0 2px 0px #1f6377;
+    }
+    .wui-scanlottery-container input{
+        border: 1px solid #dbdbdb;
+        box-sizing: border-box;
+        font-size: 1rem;
+        height: 2.4rem;
+        line-height: 2.4rem;
+        border-radius: .2rem;
+        width: 100%;
+        outline: none;
+        padding: 0 0 0 .3rem;
+        font-family: "黑体";
     }
 </style>
 {% endblock %}
 
 {% block content-panel %}
+<div class="wui-scanlottery-page" style="background-image: url({{homepage_image}});">
     <div class="wui-scanlottery-container wui-hidden wa-scanlottery-container">
-        <label>姓名：<input type="text" class="wa-name"></label>
-        <label>手机号：<input type="number" maxlength="11" class="wa-phone"></label>
-
-        <button type="button" class="wui-submit wa-submit">开始抽奖</button>
-        <button type="button" class="wui-again wa-again">重新扫码</button>
+        <div> 
+            <input type="text" placeholder="请输入姓名" class="wui-excode-input wa-name">
+        </div>
+        <div> 
+            <input type="text" placeholder="请输入手机号码" class="wui-phone-input wa-phone" maxlength="11">
+        </div>
+        <button type="button" class="wui-again wa-again wui-scanlottery-btn">重新扫码</button>
+        <button type="button" class="wui-submit wa-submit wui-scanlottery-btn">开始抽奖</button>
     </div>
+</div>
 {% endblock %}
 
 {% block js %}
@@ -39,6 +83,14 @@
             if(!name || !phone){
                 wuiAlert('请填写姓名和手机号~');
                 return;
+            }
+            if(!/^0{0,1}(13[0-9]|15[0-9]|17[0-9]|18[0-9])[0-9]{8}$/g.test(phone)){
+                wuiAlert('请输入正确的手机号');
+                return false;
+            }
+            if(scanCode.length != 20){
+                wuiAlert('您的二维码有误');
+                return false;
             }
             window.location.href = '/m/apps/scanlottery/m_scanlottery/?webapp_owner_id=' + W.webappOwnerId + '&name=' + name + '&phone=' + phone + '&scan_code=' + scanCode + '&record_id=' + W.recordId;
         });
