--- a/weapp/weixin2/templates/weixin/channels/channel_distributions.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distributions.html
@@ -1,29 +1,107 @@
 {% extends "content_base_v2.html" %}
 {% block css %}
-<style>
+    <style>
 
-</style>
+    </style>
 {% endblock %}
 {% block content-panel %}
 
-	<div class="relative">
-		<ul class="breadcrumb">
-			<li>您当前所在位置</li>
-			<li><a href="/new_weixin/materials/">高级管理</a></li>
-			<li><a href="/new_weixin/qrcodes/">带参数二维码</a></li>
-			<li class="active">关注会员</li>
-		</ul>
-	</div>
-	<div class="xui-filterPanel" >
+    <div class="relative">
+        <ul class="breadcrumb">
+            <li>您当前所在位置</li>
+            <li><a href="/new_weixin/materials/">高级管理</a></li>
+            <li><a href="/new_weixin/qrcodes/">带参数二维码</a></li>
+            <li class="active">关注会员</li>
+        </ul>
+    </div>
+    <div class="xui-filterPanel" >
         <div class="xui-form disT ml20">
             <div class="xui-i-item">
-			<input
-				type="text"
-				class="form-control"
-                placeholder="二维码名称"
-            />
-</div>
-				<a class="btn btn-primary xa-search xui-fontBold " href="javascript:void(0);">查询</a>
-<a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode fr mr10" href="/new_weixin/channel_distribution/"><span class="xui-add-btn-icon">+</span>新建二维码</a>
+                <input
+                        type="text"
+                        class="form-control"
+                        placeholder="二维码名称"
+                />
+            </div>
+            <a class="btn btn-primary xa-search xui-fontBold " href="javascript:void(0);">查询</a>
+            <a class="btn btn-success lh20 xui-i-btnWidth xa-addQrcode fr mr10" href="/new_weixin/channel_distribution/">
+                <span class="xui-add-btn-icon">+</span>新建二维码
+            </a>
+        </div>
+    </div>
 
-		</div>{% endblock %}
+    <div
+            data-ui-role="advanced-table"
+            data-app="new_weixin"
+            data-resource="channel_distributions"
+            data-template-id="#setting_list_view"
+            data-init-sort="-created_at"
+            data-item-count-per-page="20"
+            data-enable-paginator="true"
+            class="panel-body mt40"
+    >
+    </div>
+{#    <div id="qrcode_table"></div>#}
+{% endblock %}
+{% block js %}
+    {% verbatim %}
+        <script id="setting_list_view" type="text/x-jquery-tmpl">
+		{{if items}}
+			<table class="table table-condensed xb-stripedTable xb-theadBg">
+				<thead>
+					<tr>
+						<th style="width:16%;">
+								<span class="">二维码名称</span>
+						</th>
+
+						<th style="width:10%;" class="tx_sortable xa-sorting" data-sort-attr='count' data-sort-direction="up"><a href="javascript:;">关注数量</a> <img class="xa-storingimg" src="" alt=""> </th>
+						<th style="width:15%;" class="tx_sortable" data-sort-attr='total_final_price'><a href="javascript:void(0);">扫码后成交金额</a></th>
+						<th style="width:15%;">扫码奖励</th>
+						<th style="width:10%;" class="tx_sortable" data-sort-attr='created_at'><a href="javascript:void(0);">创建时间</a></th>
+						<th style="width:10%;">备注</th>
+						<th style="width:100px;">关联会员</th>
+						<th style="width:10%;">操作</th>
+					</tr>
+				</thead>
+				<tbody>
+					{{if items.length}}
+						{{each(i, qrcode) items}}
+							<tr>
+							    <td>
+							        ${qrcode.title}
+							    </td>
+							    <td>
+							        ${qrcode.bing_member_name}
+							    </td>
+							    <td>
+							        ${qrcode.bing_member_count}
+							    </td>
+							    <td>
+							        ${qrcode.total_transaction_volume}
+							    </td>
+							    <td>
+							        ${qrcode.total_return}
+							    </td>
+							    <td>
+							        ${qrcode.award_prize_info}
+							    </td>
+							</tr>
+						{{/each}}
+					{{else}}
+						<tr><td colspan='9'>还没有数据</td></tr>
+					{{/if}}
+				</tbody>
+			</table>
+						{{else}}
+				当前还没有二维码，请添加二维码
+			{{/if}}
+        </script>
+    {% endverbatim %}
+
+    <script>
+
+  //  var myTemplate = Handlebars.compile($("#table-template").html());
+
+  //  $('#tableList').html(myTemplate(data));
+    </script>
+{% endblock %}
